# shamela-epub-exporter

./: .gitignore  .prettierignore  CHANGELOG.md  PRIVACY.md  README.ar.md  README.md  components.json  eslint.config.js  lefthook.yaml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  renovate.json5  tailwind.config.js  vite.config.ts  vitest.config.ts  wuchale.config.js  wxt.config.ts
.github/workflows/: release.yml
patches/: wxt@0.20.14.patch
public/_locales/ar/: messages.json
public/_locales/en/: messages.json
scripts/: screenshot-extension.mjs
src/: pdfmake-rtl.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BokConverter.svelte
src/entrypoints/: background.ts  content.ts
src/entrypoints/job/: App.svelte  index.html  main.ts
src/entrypoints/options/: index.html  main.ts
src/entrypoints/popup/: App.svelte  app.css  index.html  main.ts
src/lib/: Counter.svelte  job-manager.ts  job-state.svelte.ts  job-store.tauri.ts  job-store.ts  job-store.types.ts  job-store.wxt.ts  scraper.ts  utils.ts
src/lib/bok/: analyze.ts  encoding.ts  html.ts  pages.ts  pdf.ts  runtime.ts  types.ts
src/lib/platform/: index.tauri.ts  index.ts  index.wxt.ts  types.ts
src/locales/: ar.po  data.d.ts  en.po  locale.ts
src/tauri/: index.html  main.ts
src/tests/: bok-analyze.test.ts  bok-encoding.test.ts  bok-html.test.ts  bok-pages.test.ts  epub.test.ts  scrape-utils.test.ts
tests/: epub.test.ts  scrape-utils.test.ts
(+48 files in other folders)
